# basicpy_napari

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
src/napari_basicpy/: _widget.py  napari.yaml
src/napari_basicpy/_tests/: test_widget.py
